Update error analysis notebook with best performing model thus far

--- a/ashrae/ashrae-lightgbm-error-analysis.ipynb
+++ b/ashrae/ashrae-lightgbm-error-analysis.ipynb
@@ -26,9 +26,16 @@
                     "sourceType": "competition"
                 },
                 {
-                    "sourceId": 10716110,
+                    "sourceId": 10748143,
                     "sourceType": "datasetVersion",
                     "datasetId": 6473980
+                },
+                {
+                    "sourceId": 258228,
+                    "sourceType": "modelInstanceVersion",
+                    "isSourceIdPinned": true,
+                    "modelInstanceId": 220701,
+                    "modelId": 242476
                 }
             ],
             "dockerImageVersionId": 30886,
@@ -91,7 +98,7 @@
         },
         {
             "cell_type": "code",
-            "source": "CATEGORICAL_FEATURES = [\n    \"building_id\",\n    \"meter_id\",\n    \"site_id\",\n    \"primary_use\",\n]\nNUMERICAL_FEATURES = [\n    \"square_feet\",\n    \"floor_count\",\n    \"air_temperature\",\n    \"cloud_coverage\",\n    \"dew_temperature\",\n    \"precip_depth_1_hr\",\n    \"sea_level_pressure\",\n    \"wind_direction_sin\",\n    \"wind_direction_cos\",\n    \"wind_speed\",\n    \"air_temperature_lag_1\",\n    \"air_temperature_lag_2\",\n    \"dew_temperature_lag_1\",\n    \"dew_temperature_lag_2\",\n    \"sea_level_pressure_lag_1\",\n    \"sea_level_pressure_lag_2\",\n    \"hour_sin\",\n    \"hour_cos\",\n    \"day_of_week_sin\",\n    \"day_of_week_cos\",\n    \"month_sin\",\n    \"month_cos\",\n    \"is_weekend\",\n    \"building_age_years\",\n    \"building_area_square_feet\",\n    \"relative_humidity\",\n    \"cold_chill\",\n    \"apparent_temperature\",\n    \"heat_index\",\n]\nFEATURES = NUMERICAL_FEATURES + CATEGORICAL_FEATURES\n\nLABEL = \"meter_reading\"",
+            "source": "CATEGORICAL_FEATURES = [\n    \"building_id\",\n    \"meter_id\",\n    \"site_id\",\n    \"primary_use\",\n]\nNUMERICAL_FEATURES = [\n    \"square_feet\",\n    \"floor_count\",\n    \"air_temperature\",\n    \"cloud_coverage\",\n    \"dew_temperature\",\n    \"precip_depth_1_hr\",\n    \"sea_level_pressure\",\n    \"wind_direction_sin\",\n    \"wind_direction_cos\",\n    \"wind_speed\",\n    \"air_temperature_smoothed_lag_1\",\n    \"air_temperature_smoothed_lag_2\",\n    \"air_temperature_smoothed_lag_3\",\n    \"air_temperature_smoothed_lag_4\",\n    \"air_temperature_smoothed_lag_5\",\n    \"air_temperature_smoothed_rolling_mean_12\",\n    \"air_temperature_smoothed_rolling_mean_24\",\n    \"dew_temperature_smoothed_lag_1\",\n    \"dew_temperature_smoothed_lag_2\",\n    \"dew_temperature_smoothed_lag_3\",\n    \"dew_temperature_smoothed_lag_4\",\n    \"dew_temperature_smoothed_lag_5\",\n    \"dew_temperature_smoothed_rolling_mean_12\",\n    \"dew_temperature_smoothed_rolling_mean_24\",\n    \"sea_level_pressure_smoothed_lag_1\",\n    \"sea_level_pressure_smoothed_lag_2\",\n    \"sea_level_pressure_smoothed_lag_3\",\n    \"sea_level_pressure_smoothed_lag_4\",\n    \"sea_level_pressure_smoothed_lag_5\",\n    \"sea_level_pressure_smoothed_rolling_mean_12\",\n    \"sea_level_pressure_smoothed_rolling_mean_24\",\n    \"hour_sin\",\n    \"hour_cos\",\n    \"day_of_week_sin\",\n    \"day_of_week_cos\",\n    \"month_sin\",\n    \"month_cos\",\n    \"is_weekend\",\n    \"building_age_years\",\n    \"building_area_square_feet\",\n    \"relative_humidity\",\n    \"cold_chill\",\n    \"apparent_temperature\",\n    \"heat_index\",\n]\nFEATURES = NUMERICAL_FEATURES + CATEGORICAL_FEATURES\n\nLABEL = \"meter_reading\"",
             "metadata": {
                 "trusted": true
             },
@@ -100,7 +107,7 @@
         },
         {
             "cell_type": "code",
-            "source": "N_ITERATIONS = 20\nTRAIN_PARAMETERS = {\n    \"objective\": \"mean_squared_error\",\n    \"learning_rate\": 0.01,\n    \"seed\": 1,\n    \"max_bin\": 255,\n    \"num_leaves\": 2 ** 6 - 1,\n    \"min_data_in_leaf\": 50,\n    \"metric\": [\"rmse\"],\n}\nDATASET_PARAMETERS = {\"categorical_feature\": CATEGORICAL_FEATURES}",
+            "source": "N_ITERATIONS = 2000\nTRAIN_PARAMETERS = {\n    \"objective\": \"mean_squared_error\",\n    \"learning_rate\": 0.01,\n    \"seed\": 1,\n    \"max_bin\": 255,\n    \"num_leaves\": 2 ** 6 - 1,\n    \"min_data_in_leaf\": 100,\n    \"bagging_fraction\": 0.5,\n    \"bagging_freq\": 1,\n    \"feature_fraction\": 0.6,\n    \"metric\": [\"rmse\"],\n}\nDATASET_PARAMETERS = {\"categorical_feature\": CATEGORICAL_FEATURES}",
             "metadata": {
                 "trusted": true
             },
@@ -127,7 +134,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Save model\n_ = model.save_model(\"ashrae_global_lightgbm_model\")",
+            "source": "# Save model\nmodel_save_path = \"/kaggle/working/ashrae_global_lightgbm_model\"\n_ = model.save_model(model_save_path)",
             "metadata": {
                 "trusted": true
             },
@@ -141,7 +148,7 @@
         },
         {
             "cell_type": "code",
-            "source": "if not TRAINING_RUN:\n    # Load model\n    model = lgbm.Booster(model_file=\"/kaggle/working/ashrae_global_lightgbm_model\")\n    \n    # Predict \n    y_hat = model.predict(X_valid)\n    # y_hat = np.random.normal(size=y_valid.shape)\n    \n    valid_df = valid_df.copy()\n    valid_df[\"y_true\"] = y_valid\n    valid_df[\"y_hat\"] = y_hat\n    \n    valid_df[\"squared_error\"] = (y_hat - y_valid) ** 2\n    valid_df = valid_df.set_index([\"meter_id\", \"site_id\", \"building_id\"])",
+            "source": "if not TRAINING_RUN:\n    # Load model\n    # model_load_path = \n    model = lgbm.Booster(model_file=\"/kaggle/working/ashrae_global_lightgbm_model\")\n    \n    # Predict \n    y_hat = model.predict(X_valid)\n    # y_hat = np.random.normal(size=y_valid.shape)\n    \n    valid_df = valid_df.copy()\n    valid_df[\"y_true\"] = np.array(y_valid)\n    valid_df[\"y_hat\"] = y_hat\n    \n    valid_df[\"squared_error\"] = (y_hat - y_valid) ** 2\n    valid_df = valid_df.set_index([\"meter_id\", \"site_id\", \"building_id\"]).sort_index()",
             "metadata": {
                 "trusted": true
             },
@@ -155,16 +162,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Load model\nmodel = lgbm.Booster(model_file=\"/kaggle/working/ashrae_global_lightgbm_model\")\n\n# Predict \ny_hat = model.predict(X_valid)\n# y_hat = np.random.normal(size=y_valid.shape)\n\nvalid_df = valid_df.copy()\nvalid_df[\"y_true\"] = y_valid\nvalid_df[\"y_hat\"] = y_hat\n\nvalid_df[\"squared_error\"] = (y_hat - y_valid) ** 2\nvalid_df = valid_df.set_index([\"meter_id\", \"site_id\", \"building_id\"])",
-            "metadata": {
-                "trusted": true
-            },
-            "outputs": [],
-            "execution_count": null
-        },
-        {
-            "cell_type": "code",
-            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nfig, ax = plt.subplots(1, len(meter_types), figsize=(3.5*len(meter_types), 3.5))\nfor m, meter_id in enumerate(meter_types):\n    meter_df = valid_df.loc[meter_id]\n    sns.histplot(np.array(meter_df[\"y_true\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_true\", alpha=0.5)\n    sns.histplot(np.array(meter_df[\"y_hat\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_hat\", alpha=0.5)\n    ax[m].legend()\n    ax[m].set(\n        title=meter_types[meter_id],\n        ylabel=\"Count\" if m == 0 else \"\",\n    )\n\nfig.tight_layout();",
+            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nif not TRAINING_RUN:\n    fig, ax = plt.subplots(1, len(meter_types), figsize=(3.5*len(meter_types), 3.5))\n    for m, meter_id in enumerate(meter_types):\n        meter_df = valid_df.loc[meter_id]\n        sns.histplot(np.array(meter_df[\"y_true\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_true\", alpha=0.5)\n        sns.histplot(np.array(meter_df[\"y_hat\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_hat\", alpha=0.5)\n        ax[m].legend()\n        ax[m].set(\n            title=meter_types[meter_id],\n            ylabel=\"Count\" if m == 0 else \"\",\n        )\n    \n    fig.tight_layout();",
             "metadata": {
                 "trusted": true
             },
@@ -194,7 +192,10 @@
             "cell_type": "code",
             "source": "site_ids_by_meter_type = {\n    0: [2, 3, 14],\n    1: [2, 9, 14],\n    2: [9, 13, 15],\n    3: [1, 2, 14],\n}",
             "metadata": {
-                "trusted": true
+                "trusted": true,
+                "execution": {
+                    "execution_failed": "2025-02-17T09:22:43.191Z"
+                }
             },
             "outputs": [],
             "execution_count": null
