Plots from error analysis

--- a/ashrae/ashrae-lightgbm-error-analysis.ipynb
+++ b/ashrae/ashrae-lightgbm-error-analysis.ipynb
@@ -31,7 +31,7 @@
                     "datasetId": 6473980
                 },
                 {
-                    "sourceId": 258228,
+                    "sourceId": 261566,
                     "sourceType": "modelInstanceVersion",
                     "isSourceIdPinned": true,
                     "modelInstanceId": 220701,
@@ -61,7 +61,7 @@
         },
         {
             "cell_type": "code",
-            "source": "TRAINING_RUN = True",
+            "source": "TRAINING_RUN = False",
             "metadata": {
                 "trusted": true
             },
@@ -125,7 +125,7 @@
         },
         {
             "cell_type": "code",
-            "source": "val_start, val_end = pd.Timestamp(\"2016-11-01 00:00:00\"), pd.Timestamp(\"2016-12-01 00:00:00\")\nval_start, val_end = pd.Timestamp(\"2016-12-01 00:00:00\"), pd.Timestamp(\"2017-01-01 00:00:00\")\n\n# Train / val split\ntrain_df = train_dataset[train_dataset[\"timestamp\"] < val_start]\nvalid_df = train_dataset[(train_dataset[\"timestamp\"].between(val_start, val_end, inclusive=\"left\"))]\n\nX_train, y_train = train_df[FEATURES], train_df[LABEL]\nX_valid, y_valid = valid_df[FEATURES], valid_df[LABEL]\n\n# Feature / target transforms\ny_train = target_transform(y_train)\ny_valid = target_transform(y_valid)\n\ncol_transformer = get_column_transformer()\ncol_tranformer = col_transformer.fit(X_train, y_train)\nX_train = col_transformer.transform(X_train)\nX_train = X_train.astype({\"primary_use\": \"category\"})\nX_valid = col_tranformer.transform(X_valid)\nX_valid = X_valid.astype({\"primary_use\": \"category\"})\n\ntrain_ds = lgbm.Dataset(data=X_train, label=y_train)\nvalid_ds = lgbm.Dataset(data=X_valid, label=y_valid)\n\n# Train Lightgbm\neval_results = {}\nmodel = lgbm.train(\n    TRAIN_PARAMETERS,\n    num_boost_round=N_ITERATIONS,\n    train_set=train_ds,\n    valid_sets=[train_ds, valid_ds],\n    valid_names=[\"train\", \"valid\"],\n    callbacks=[\n        lgbm.log_evaluation(period=10),\n        lgbm.record_evaluation(eval_results),\n    ]\n)",
+            "source": "val_start, val_end = pd.Timestamp(\"2016-11-01 00:00:00\"), pd.Timestamp(\"2016-12-01 00:00:00\")\nval_start, val_end = pd.Timestamp(\"2016-12-01 00:00:00\"), pd.Timestamp(\"2017-01-01 00:00:00\")\n\n# Train / val split\ntrain_df = train_dataset[train_dataset[\"timestamp\"] < val_start]\nvalid_df = train_dataset[(train_dataset[\"timestamp\"].between(val_start, val_end, inclusive=\"left\"))]\n\nX_train, y_train = train_df[FEATURES], train_df[LABEL]\nX_valid, y_valid = valid_df[FEATURES], valid_df[LABEL]\n\n# Feature / target transforms\ny_train = target_transform(y_train)\ny_valid = target_transform(y_valid)\n\ncol_transformer = get_column_transformer()\ncol_tranformer = col_transformer.fit(X_train, y_train)\nX_train = col_transformer.transform(X_train)\nX_train = X_train.astype({\"primary_use\": \"category\"})\nX_valid = col_tranformer.transform(X_valid)\nX_valid = X_valid.astype({\"primary_use\": \"category\"})\n\nif TRAINING_RUN:\n    train_ds = lgbm.Dataset(data=X_train, label=y_train)\n    valid_ds = lgbm.Dataset(data=X_valid, label=y_valid)\n    \n    # Train Lightgbm\n    eval_results = {}\n    model = lgbm.train(\n        TRAIN_PARAMETERS,\n        num_boost_round=N_ITERATIONS,\n        train_set=train_ds,\n        valid_sets=[train_ds, valid_ds],\n        valid_names=[\"train\", \"valid\"],\n        callbacks=[\n            lgbm.log_evaluation(period=10),\n            lgbm.record_evaluation(eval_results),\n        ]\n    )\n\n    # Save model\n    model_save_path = \"/kaggle/working/ashrae_global_lightgbm_model\"\n    _ = model.save_model(model_save_path)",
             "metadata": {
                 "trusted": true
             },
@@ -134,7 +134,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Save model\nmodel_save_path = \"/kaggle/working/ashrae_global_lightgbm_model\"\n_ = model.save_model(model_save_path)",
+            "source": "del train_dataset, train_df, X_train, y_train\ngc.collect()",
             "metadata": {
                 "trusted": true
             },
@@ -143,12 +143,12 @@
         },
         {
             "cell_type": "markdown",
-            "source": "## Evalute",
+            "source": "## Evaluate",
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "source": "if not TRAINING_RUN:\n    # Load model\n    # model_load_path = \n    model = lgbm.Booster(model_file=\"/kaggle/working/ashrae_global_lightgbm_model\")\n    \n    # Predict \n    y_hat = model.predict(X_valid)\n    # y_hat = np.random.normal(size=y_valid.shape)\n    \n    valid_df = valid_df.copy()\n    valid_df[\"y_true\"] = np.array(y_valid)\n    valid_df[\"y_hat\"] = y_hat\n    \n    valid_df[\"squared_error\"] = (y_hat - y_valid) ** 2\n    valid_df = valid_df.set_index([\"meter_id\", \"site_id\", \"building_id\"]).sort_index()",
+            "source": "if not TRAINING_RUN:\n    # Load model\n    model_load_path = \"/kaggle/input/ashrae_global_lightgbm/other/default/2/ashrae_global_lightgbm_model\"\n    model = lgbm.Booster(model_file=model_load_path)\n    \n    # Predict \n    y_hat = model.predict(X_valid)\n    # y_hat = np.random.normal(size=y_valid.shape)\n    \n    valid_df = valid_df.copy()\n    valid_df[\"y_true\"] = np.array(y_valid)\n    valid_df[\"y_hat\"] = y_hat\n    \n    valid_df[\"squared_error\"] = (y_hat - y_valid) ** 2\n    valid_df = valid_df.set_index([\"meter_id\", \"site_id\", \"building_id\"]).sort_index()",
             "metadata": {
                 "trusted": true
             },
@@ -162,7 +162,7 @@
         },
         {
             "cell_type": "code",
-            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nif not TRAINING_RUN:\n    fig, ax = plt.subplots(1, len(meter_types), figsize=(3.5*len(meter_types), 3.5))\n    for m, meter_id in enumerate(meter_types):\n        meter_df = valid_df.loc[meter_id]\n        sns.histplot(np.array(meter_df[\"y_true\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_true\", alpha=0.5)\n        sns.histplot(np.array(meter_df[\"y_hat\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_hat\", alpha=0.5)\n        ax[m].legend()\n        ax[m].set(\n            title=meter_types[meter_id],\n            ylabel=\"Count\" if m == 0 else \"\",\n        )\n    \n    fig.tight_layout();",
+            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nif not TRAINING_RUN:\n    fig, ax = plt.subplots(1, len(meter_types), figsize=(3.5*len(meter_types), 3.5))\n    for m, meter_id in enumerate(meter_types):\n        meter_df = valid_df.loc[meter_id]\n        sns.histplot(np.array(meter_df[\"y_true\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_true\", alpha=0.5, stat=\"density\")\n        sns.histplot(np.array(meter_df[\"y_hat\"]), bins=30, kde=True, ax=ax[m], lw=0, label=\"y_hat\", alpha=0.5, stat=\"density\")\n        ax[m].legend()\n        ax[m].set(\n            title=meter_types[meter_id],\n            ylabel=\"Density\" if m == 0 else \"\",\n        )\n    \n    fig.tight_layout();\n    plt.savefig(\"target_distributions.png\", dpi=300)",
             "metadata": {
                 "trusted": true
             },
@@ -176,7 +176,7 @@
         },
         {
             "cell_type": "code",
-            "source": "if not TRAINING_RUN:\n    # Plot predictions for individual buildings\n    meter_id = 2\n    site_id = 15\n    \n    n_plots = 5\n    n_buildings_per_plot = 3\n    \n    # Sample some buildings to plot\n    all_building_ids = valid_df.loc[(meter_id, site_id)].index.values\n    building_ids_to_plot = np.random.choice(\n        all_building_ids,\n        size=n_plots * n_buildings_per_plot,\n        replace=False\n    )\n    \n    fig, ax = plt.subplots(n_plots, 1, figsize=(10, 12), sharex=True)\n    colors = cm.copper(np.linspace(0, 1, n_buildings_per_plot))\n    for plot_idx in range(n_plots):\n        # Get indices of buildings to plot\n        start_b_idx = plot_idx * n_buildings_per_plot\n        end_b_idx = start_b_idx + n_buildings_per_plot\n        building_ids_current_plot = building_ids_to_plot[start_b_idx: end_b_idx]\n        \n        for b_idx, building_id in enumerate(building_ids_current_plot):\n            msb_df = valid_df.loc[(meter_id, site_id, building_id)].sort_values(\"timestamp\")\n            ax[plot_idx].plot(\n                msb_df[\"timestamp\"].values,\n                msb_df[\"y_true\"].values,\n                label=building_id,\n                color=colors[b_idx],\n            )\n            ax[plot_idx].plot(\n                msb_df[\"timestamp\"].values,\n                msb_df[\"y_hat\"].values,\n                color=colors[b_idx],\n                ls=\"--\",\n            )\n    \n        ax[plot_idx].legend(fontsize=\"small\", ncols=n_buildings_per_plot, loc=4)\n        ax[plot_idx].set_ylabel(\"log meter_reading\")\n        # for tick in ax[plot_idx].get_xticklabels():\n        #     tick.set_rotation(45)\n        \n    fig.tight_layout();",
+            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nif not TRAINING_RUN:\n    # Plot predictions for individual buildings\n    meter_id = 1\n    site_id = 2\n    \n    n_plots = 5\n    n_buildings_per_plot = 3\n    \n    # Sample some buildings to plot\n    all_building_ids = valid_df.loc[(meter_id, site_id)].index.values\n    building_ids_to_plot = np.random.choice(\n        all_building_ids,\n        size=n_plots * n_buildings_per_plot,\n        replace=False\n    )\n    \n    fig, ax = plt.subplots(n_plots, 1, figsize=(10, 12), sharex=True)\n    colors = cm.copper(np.linspace(0, 1, n_buildings_per_plot))\n    for plot_idx in range(n_plots):\n        # Get indices of buildings to plot\n        start_b_idx = plot_idx * n_buildings_per_plot\n        end_b_idx = start_b_idx + n_buildings_per_plot\n        building_ids_current_plot = building_ids_to_plot[start_b_idx: end_b_idx]\n        \n        for b_idx, building_id in enumerate(building_ids_current_plot):\n            msb_df = valid_df.loc[(meter_id, site_id, building_id)].sort_values(\"timestamp\")\n            ax[plot_idx].plot(\n                msb_df[\"timestamp\"].values,\n                msb_df[\"y_true\"].values,\n                label=building_id,\n                color=colors[b_idx],\n                lw=2,\n            )\n            ax[plot_idx].plot(\n                msb_df[\"timestamp\"].values,\n                msb_df[\"y_hat\"].values,\n                color=colors[b_idx],\n                ls=\"--\",\n                lw=2,\n            )\n    \n        ax[plot_idx].legend(fontsize=\"small\", ncols=n_buildings_per_plot, loc=4)\n        ax[plot_idx].set(\n            ylabel=\"log meter_reading\",\n            title=(\n                f\"{meter_types[meter_id]}, site {site_id}\"\n                if plot_idx == 0 else \"\"\n            )\n        )\n        # for tick in ax[plot_idx].get_xticklabels():\n        #     tick.set_rotation(45)\n        \n    fig.tight_layout();\n    # plt.savefig(f\"{meter_types[meter_id]}_ts_site_{site_id}.png\", dpi=300);",
             "metadata": {
                 "trusted": true
             },
@@ -192,10 +192,7 @@
             "cell_type": "code",
             "source": "site_ids_by_meter_type = {\n    0: [2, 3, 14],\n    1: [2, 9, 14],\n    2: [9, 13, 15],\n    3: [1, 2, 14],\n}",
             "metadata": {
-                "trusted": true,
-                "execution": {
-                    "execution_failed": "2025-02-17T09:22:43.191Z"
-                }
+                "trusted": true
             },
             "outputs": [],
             "execution_count": null
@@ -220,7 +217,7 @@
         },
         {
             "cell_type": "code",
-            "source": "if not TRAINING_RUN:\n    meter_id = 0\n    sites_to_plot = site_ids_by_meter_type[meter_id]\n    \n    fig, ax = plt.subplots(1, len(sites_to_plot), figsize=(5 * len(sites_to_plot), 4)) \n    \n    for i, site_id in enumerate(sites_to_plot):\n        site_meter_df = (\n            valid_df.loc[(meter_id, site_id)]\n            .reset_index()\n            .sort_values([\"building_id\", \"timestamp\"])\n        )\n        \n        # Get error thresholds and scales\n        error_threshold_q75 = np.percentile(site_meter_df[\"squared_error\"], q=75)\n        error_threshold_q90 = np.percentile(site_meter_df[\"squared_error\"], q=90)\n        error_thresholds = [error_threshold_q75, error_threshold_q90]\n        site_meter_df[\"error_scale\"] = site_meter_df[\"squared_error\"].apply(error_scale, args=error_thresholds)\n        \n        site_meter_df = site_meter_df.pivot(index=\"building_id\", columns=\"timestamp\", values=\"error_scale\")\n    \n        # Define color map\n        error_scales = [1, 2, 3]\n        colors = [\"lightgrey\", \"green\", \"orange\"]\n        cmap = mcolors.ListedColormap(colors)\n        bounds = [e - 0.5 for e in error_scales + [4]]\n        norm = mcolors.BoundaryNorm(boundaries=bounds, ncolors=len(colors))\n        \n        ax[i] = sns.heatmap(site_meter_df, ax=ax[i], cmap=cmap, norm=norm)\n        cbar = ax[i].collections[0].colorbar\n        cbar.set_ticks(error_scales)\n        cbar.set_ticklabels([str(e) for e in error_scales])\n        \n        # Format x-axis labels\n        timestamps = site_meter_df.columns\n        xtick_locs = range(0, len(timestamps), 72)  # Every third entry\n        xtick_labels = [pd.to_datetime(timestamps[i]).strftime(\"%Y-%m-%d\") for i in xtick_locs]\n        \n        ax[i].set_xticks(xtick_locs)\n        ax[i].set_xticklabels(xtick_labels, rotation=45, ha=\"center\")\n        ax[i].set_xlabel(\"\")\n        \n    fig.tight_layout();",
+            "source": "meter_types = {0: \"electricity\", 1: \"chilledwater\", 2: \"steam\", 3: \"hotwater\"}\n\nif not TRAINING_RUN:\n    meter_id = 3\n    sites_to_plot = site_ids_by_meter_type[meter_id]\n    \n    fig, ax = plt.subplots(1, len(sites_to_plot), figsize=(5 * len(sites_to_plot), 4)) \n    \n    for i, site_id in enumerate(sites_to_plot):\n        site_meter_df = (\n            valid_df.loc[(meter_id, site_id)]\n            .reset_index()\n            .sort_values([\"building_id\", \"timestamp\"])\n        )\n        \n        # Get error thresholds and scales\n        error_threshold_q75 = np.percentile(site_meter_df[\"squared_error\"], q=75)\n        error_threshold_q90 = np.percentile(site_meter_df[\"squared_error\"], q=90)\n        error_thresholds = [error_threshold_q75, error_threshold_q90]\n        site_meter_df[\"error_scale\"] = site_meter_df[\"squared_error\"].apply(error_scale, args=error_thresholds)\n        \n        site_meter_df = site_meter_df.pivot_table(\n            index=\"building_id\",\n            columns=\"timestamp\",\n            values=\"error_scale\",\n            aggfunc=\"mean\",\n        )\n    \n        # Define color map\n        error_scales = [1, 2, 3]\n        colors = [\"lightgrey\", \"green\", \"orange\"]\n        cmap = mcolors.ListedColormap(colors)\n        bounds = [e - 0.5 for e in error_scales + [4]]\n        norm = mcolors.BoundaryNorm(boundaries=bounds, ncolors=len(colors))\n        \n        ax[i] = sns.heatmap(site_meter_df, ax=ax[i], cmap=cmap, norm=norm)\n        cbar = ax[i].collections[0].colorbar\n        cbar.set_ticks(error_scales)\n        cbar.set_ticklabels([str(e) for e in error_scales])\n        \n        # Format x-axis labels\n        timestamps = site_meter_df.columns\n        xtick_locs = range(0, len(timestamps), 72)  # Every third entry\n        xtick_labels = [pd.to_datetime(timestamps[i]).strftime(\"%Y-%m-%d\") for i in xtick_locs]\n        \n        ax[i].set_xticks(xtick_locs)\n        ax[i].set_xticklabels(xtick_labels, rotation=45, ha=\"center\")\n        ax[i].set_xlabel(\"\")\n        ax[i].set_title(f\"Site {site_id}\")\n        \n    fig.tight_layout();\n    plt.savefig(f\"{meter_types[meter_id]}_heatmaps.png\", dpi=300);",
             "metadata": {
                 "trusted": true
             },
