--- a/ashrae/ashrae-global-lightgbm.ipynb
+++ b/ashrae/ashrae-global-lightgbm.ipynb
@@ -1,8 +1,18 @@
 {
     "cells": [
         {
+            "cell_type": "markdown",
+            "id": "002827ad",
+            "metadata": {},
+            "source": [
+                "# ASHRAE GLOBAL LIGHTGBM\n",
+                "\n",
+                "This notebook trains a single LightGBM model to predict energy consumption across all meter types, buildings, and sites. It uses the training dataset constructed in the notebook [ashrae-feature-engineering.ipynb](ashrae-feature-engineering.ipynb)"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "id": "e29dff75",
             "metadata": {
                 "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -42,7 +52,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "id": "1a968f32",
             "metadata": {
                 "execution": {
@@ -67,7 +77,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "id": "5604b058",
             "metadata": {
                 "execution": {
@@ -123,7 +133,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": null,
             "id": "d17070f0",
             "metadata": {
                 "execution": {
@@ -187,7 +197,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": null,
             "id": "6897f06c",
             "metadata": {
                 "execution": {
@@ -205,18 +215,7 @@
                 },
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Col 'timestamp' missing from df. Skipping ...\n",
-                        "Col 'hour' missing from df. Skipping ...\n",
-                        "Col 'day_of_week' missing from df. Skipping ...\n",
-                        "Col 'month' missing from df. Skipping ...\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "train_dataset = pd.read_parquet(\"/kaggle/input/ashrae-iii/train_df.parquet\")\n",
                 "train_dataset = drop_cols(train_dataset)\n",
@@ -242,7 +241,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": null,
             "id": "aafde516",
             "metadata": {
                 "execution": {
@@ -321,7 +320,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": null,
             "id": "b963ed77",
             "metadata": {
                 "execution": {
@@ -359,7 +358,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": null,
             "id": "d55c34c9",
             "metadata": {
                 "execution": {
@@ -411,7 +410,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": null,
             "id": "41968600",
             "metadata": {
                 "execution": {
@@ -429,223 +428,7 @@
                 },
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Training model for submission ...\n",
-                        "\n",
-                        "[LightGBM] [Warning] Categorical features with more bins than the configured maximum bin number found.\n",
-                        "[LightGBM] [Warning] For categorical features, max_bin and max_bin_by_feature may be ignored with a large number of categories.\n",
-                        "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 6.108324 seconds.\n",
-                        "You can set `force_col_wise=true` to remove the overhead.\n",
-                        "[LightGBM] [Info] Total Bins 10250\n",
-                        "[LightGBM] [Info] Number of data points in the train set: 19698412, number of used features: 48\n",
-                        "[LightGBM] [Info] Start training from score 4.293175\n",
-                        "[10]\ttrain's rmse: 1.93566\n",
-                        "[20]\ttrain's rmse: 1.85087\n",
-                        "[30]\ttrain's rmse: 1.77999\n",
-                        "[40]\ttrain's rmse: 1.71779\n",
-                        "[50]\ttrain's rmse: 1.66125\n",
-                        "[60]\ttrain's rmse: 1.60758\n",
-                        "[70]\ttrain's rmse: 1.55793\n",
-                        "[80]\ttrain's rmse: 1.51379\n",
-                        "[90]\ttrain's rmse: 1.46899\n",
-                        "[100]\ttrain's rmse: 1.43174\n",
-                        "[110]\ttrain's rmse: 1.39154\n",
-                        "[120]\ttrain's rmse: 1.35526\n",
-                        "[130]\ttrain's rmse: 1.32237\n",
-                        "[140]\ttrain's rmse: 1.29823\n",
-                        "[150]\ttrain's rmse: 1.27072\n",
-                        "[160]\ttrain's rmse: 1.24481\n",
-                        "[170]\ttrain's rmse: 1.22819\n",
-                        "[180]\ttrain's rmse: 1.20465\n",
-                        "[190]\ttrain's rmse: 1.18573\n",
-                        "[200]\ttrain's rmse: 1.169\n",
-                        "[210]\ttrain's rmse: 1.15305\n",
-                        "[220]\ttrain's rmse: 1.13974\n",
-                        "[230]\ttrain's rmse: 1.1214\n",
-                        "[240]\ttrain's rmse: 1.10465\n",
-                        "[250]\ttrain's rmse: 1.0912\n",
-                        "[260]\ttrain's rmse: 1.0779\n",
-                        "[270]\ttrain's rmse: 1.06552\n",
-                        "[280]\ttrain's rmse: 1.05352\n",
-                        "[290]\ttrain's rmse: 1.04533\n",
-                        "[300]\ttrain's rmse: 1.03807\n",
-                        "[310]\ttrain's rmse: 1.02989\n",
-                        "[320]\ttrain's rmse: 1.01828\n",
-                        "[330]\ttrain's rmse: 1.01029\n",
-                        "[340]\ttrain's rmse: 0.999557\n",
-                        "[350]\ttrain's rmse: 0.992805\n",
-                        "[360]\ttrain's rmse: 0.985805\n",
-                        "[370]\ttrain's rmse: 0.978096\n",
-                        "[380]\ttrain's rmse: 0.971959\n",
-                        "[390]\ttrain's rmse: 0.967801\n",
-                        "[400]\ttrain's rmse: 0.96312\n",
-                        "[410]\ttrain's rmse: 0.95844\n",
-                        "[420]\ttrain's rmse: 0.954\n",
-                        "[430]\ttrain's rmse: 0.948685\n",
-                        "[440]\ttrain's rmse: 0.943743\n",
-                        "[450]\ttrain's rmse: 0.939276\n",
-                        "[460]\ttrain's rmse: 0.933561\n",
-                        "[470]\ttrain's rmse: 0.928773\n",
-                        "[480]\ttrain's rmse: 0.925243\n",
-                        "[490]\ttrain's rmse: 0.920675\n",
-                        "[500]\ttrain's rmse: 0.917018\n",
-                        "[510]\ttrain's rmse: 0.913395\n",
-                        "[520]\ttrain's rmse: 0.90959\n",
-                        "[530]\ttrain's rmse: 0.906766\n",
-                        "[540]\ttrain's rmse: 0.901721\n",
-                        "[550]\ttrain's rmse: 0.899769\n",
-                        "[560]\ttrain's rmse: 0.896972\n",
-                        "[570]\ttrain's rmse: 0.893956\n",
-                        "[580]\ttrain's rmse: 0.890553\n",
-                        "[590]\ttrain's rmse: 0.887814\n",
-                        "[600]\ttrain's rmse: 0.884395\n",
-                        "[610]\ttrain's rmse: 0.882699\n",
-                        "[620]\ttrain's rmse: 0.879936\n",
-                        "[630]\ttrain's rmse: 0.878057\n",
-                        "[640]\ttrain's rmse: 0.875726\n",
-                        "[650]\ttrain's rmse: 0.873277\n",
-                        "[660]\ttrain's rmse: 0.870947\n",
-                        "[670]\ttrain's rmse: 0.868813\n",
-                        "[680]\ttrain's rmse: 0.866981\n",
-                        "[690]\ttrain's rmse: 0.865004\n",
-                        "[700]\ttrain's rmse: 0.862818\n",
-                        "[710]\ttrain's rmse: 0.86075\n",
-                        "[720]\ttrain's rmse: 0.85865\n",
-                        "[730]\ttrain's rmse: 0.856845\n",
-                        "[740]\ttrain's rmse: 0.854783\n",
-                        "[750]\ttrain's rmse: 0.853246\n",
-                        "[760]\ttrain's rmse: 0.851789\n",
-                        "[770]\ttrain's rmse: 0.850242\n",
-                        "[780]\ttrain's rmse: 0.848767\n",
-                        "[790]\ttrain's rmse: 0.847082\n",
-                        "[800]\ttrain's rmse: 0.845767\n",
-                        "[810]\ttrain's rmse: 0.843664\n",
-                        "[820]\ttrain's rmse: 0.842375\n",
-                        "[830]\ttrain's rmse: 0.840541\n",
-                        "[840]\ttrain's rmse: 0.83924\n",
-                        "[850]\ttrain's rmse: 0.837763\n",
-                        "[860]\ttrain's rmse: 0.836055\n",
-                        "[870]\ttrain's rmse: 0.83468\n",
-                        "[880]\ttrain's rmse: 0.833592\n",
-                        "[890]\ttrain's rmse: 0.832455\n",
-                        "[900]\ttrain's rmse: 0.83144\n",
-                        "[910]\ttrain's rmse: 0.829942\n",
-                        "[920]\ttrain's rmse: 0.828869\n",
-                        "[930]\ttrain's rmse: 0.827837\n",
-                        "[940]\ttrain's rmse: 0.826692\n",
-                        "[950]\ttrain's rmse: 0.825805\n",
-                        "[960]\ttrain's rmse: 0.824578\n",
-                        "[970]\ttrain's rmse: 0.823802\n",
-                        "[980]\ttrain's rmse: 0.822855\n",
-                        "[990]\ttrain's rmse: 0.821823\n",
-                        "[1000]\ttrain's rmse: 0.820673\n",
-                        "[1010]\ttrain's rmse: 0.819838\n",
-                        "[1020]\ttrain's rmse: 0.818913\n",
-                        "[1030]\ttrain's rmse: 0.817995\n",
-                        "[1040]\ttrain's rmse: 0.816978\n",
-                        "[1050]\ttrain's rmse: 0.816131\n",
-                        "[1060]\ttrain's rmse: 0.815353\n",
-                        "[1070]\ttrain's rmse: 0.81445\n",
-                        "[1080]\ttrain's rmse: 0.813517\n",
-                        "[1090]\ttrain's rmse: 0.812836\n",
-                        "[1100]\ttrain's rmse: 0.811863\n",
-                        "[1110]\ttrain's rmse: 0.811224\n",
-                        "[1120]\ttrain's rmse: 0.810551\n",
-                        "[1130]\ttrain's rmse: 0.809774\n",
-                        "[1140]\ttrain's rmse: 0.809162\n",
-                        "[1150]\ttrain's rmse: 0.80845\n",
-                        "[1160]\ttrain's rmse: 0.807766\n",
-                        "[1170]\ttrain's rmse: 0.806974\n",
-                        "[1180]\ttrain's rmse: 0.806191\n",
-                        "[1190]\ttrain's rmse: 0.805534\n",
-                        "[1200]\ttrain's rmse: 0.804679\n",
-                        "[1210]\ttrain's rmse: 0.804099\n",
-                        "[1220]\ttrain's rmse: 0.803469\n",
-                        "[1230]\ttrain's rmse: 0.802809\n",
-                        "[1240]\ttrain's rmse: 0.802249\n",
-                        "[1250]\ttrain's rmse: 0.801674\n",
-                        "[1260]\ttrain's rmse: 0.801076\n",
-                        "[1270]\ttrain's rmse: 0.800444\n",
-                        "[1280]\ttrain's rmse: 0.799896\n",
-                        "[1290]\ttrain's rmse: 0.799308\n",
-                        "[1300]\ttrain's rmse: 0.798656\n",
-                        "[1310]\ttrain's rmse: 0.798054\n",
-                        "[1320]\ttrain's rmse: 0.797542\n",
-                        "[1330]\ttrain's rmse: 0.796926\n",
-                        "[1340]\ttrain's rmse: 0.796457\n",
-                        "[1350]\ttrain's rmse: 0.796013\n",
-                        "[1360]\ttrain's rmse: 0.795597\n",
-                        "[1370]\ttrain's rmse: 0.795128\n",
-                        "[1380]\ttrain's rmse: 0.794533\n",
-                        "[1390]\ttrain's rmse: 0.793965\n",
-                        "[1400]\ttrain's rmse: 0.793402\n",
-                        "[1410]\ttrain's rmse: 0.792836\n",
-                        "[1420]\ttrain's rmse: 0.792371\n",
-                        "[1430]\ttrain's rmse: 0.791889\n",
-                        "[1440]\ttrain's rmse: 0.791411\n",
-                        "[1450]\ttrain's rmse: 0.790913\n",
-                        "[1460]\ttrain's rmse: 0.790473\n",
-                        "[1470]\ttrain's rmse: 0.789974\n",
-                        "[1480]\ttrain's rmse: 0.789476\n",
-                        "[1490]\ttrain's rmse: 0.789075\n",
-                        "[1500]\ttrain's rmse: 0.788448\n",
-                        "[1510]\ttrain's rmse: 0.788025\n",
-                        "[1520]\ttrain's rmse: 0.787596\n",
-                        "[1530]\ttrain's rmse: 0.78711\n",
-                        "[1540]\ttrain's rmse: 0.78668\n",
-                        "[1550]\ttrain's rmse: 0.78616\n",
-                        "[1560]\ttrain's rmse: 0.785638\n",
-                        "[1570]\ttrain's rmse: 0.785142\n",
-                        "[1580]\ttrain's rmse: 0.78468\n",
-                        "[1590]\ttrain's rmse: 0.784181\n",
-                        "[1600]\ttrain's rmse: 0.783705\n",
-                        "[1610]\ttrain's rmse: 0.783322\n",
-                        "[1620]\ttrain's rmse: 0.782931\n",
-                        "[1630]\ttrain's rmse: 0.782303\n",
-                        "[1640]\ttrain's rmse: 0.781837\n",
-                        "[1650]\ttrain's rmse: 0.781371\n",
-                        "[1660]\ttrain's rmse: 0.780909\n",
-                        "[1670]\ttrain's rmse: 0.780433\n",
-                        "[1680]\ttrain's rmse: 0.780098\n",
-                        "[1690]\ttrain's rmse: 0.77969\n",
-                        "[1700]\ttrain's rmse: 0.779275\n",
-                        "[1710]\ttrain's rmse: 0.778933\n",
-                        "[1720]\ttrain's rmse: 0.778531\n",
-                        "[1730]\ttrain's rmse: 0.77817\n",
-                        "[1740]\ttrain's rmse: 0.77775\n",
-                        "[1750]\ttrain's rmse: 0.777442\n",
-                        "[1760]\ttrain's rmse: 0.777029\n",
-                        "[1770]\ttrain's rmse: 0.776594\n",
-                        "[1780]\ttrain's rmse: 0.776208\n",
-                        "[1790]\ttrain's rmse: 0.775858\n",
-                        "[1800]\ttrain's rmse: 0.77553\n",
-                        "[1810]\ttrain's rmse: 0.775213\n",
-                        "[1820]\ttrain's rmse: 0.774869\n",
-                        "[1830]\ttrain's rmse: 0.774527\n",
-                        "[1840]\ttrain's rmse: 0.77416\n",
-                        "[1850]\ttrain's rmse: 0.773689\n",
-                        "[1860]\ttrain's rmse: 0.773349\n",
-                        "[1870]\ttrain's rmse: 0.772992\n",
-                        "[1880]\ttrain's rmse: 0.772647\n",
-                        "[1890]\ttrain's rmse: 0.772238\n",
-                        "[1900]\ttrain's rmse: 0.771938\n",
-                        "[1910]\ttrain's rmse: 0.771476\n",
-                        "[1920]\ttrain's rmse: 0.771094\n",
-                        "[1930]\ttrain's rmse: 0.770715\n",
-                        "[1940]\ttrain's rmse: 0.770404\n",
-                        "[1950]\ttrain's rmse: 0.77015\n",
-                        "[1960]\ttrain's rmse: 0.769908\n",
-                        "[1970]\ttrain's rmse: 0.769517\n",
-                        "[1980]\ttrain's rmse: 0.769168\n",
-                        "[1990]\ttrain's rmse: 0.768765\n",
-                        "[2000]\ttrain's rmse: 0.768418\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "if not SUBMISSION_RUN:\n",
                 "    print(f\"Running cross validation ...\\n\")\n",
@@ -721,7 +504,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": null,
             "id": "40e8af35",
             "metadata": {
                 "execution": {
@@ -780,7 +563,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": null,
             "id": "1924f3c0",
             "metadata": {
                 "execution": {
@@ -812,7 +595,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": null,
             "id": "1fe46814",
             "metadata": {
                 "execution": {
@@ -830,15 +613,7 @@
                 },
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "456it [1:25:04, 11.19s/it]\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "if SUBMISSION_RUN:\n",
                 "    \n",
